[gd_scene load_steps=32 format=3 uid="uid://bie37p0rv74i7"]

[ext_resource type="Script" uid="uid://bf0bh34ffdd6e" path="res://SCRIPTS/room.gd" id="1_pgnb6"]
[ext_resource type="Texture2D" uid="uid://co6y4tpeirmbp" path="res://SPRITES/backdrop_new.png" id="2_2ivkl"]
[ext_resource type="Texture2D" uid="uid://bgkwh5bwqc8uw" path="res://SPRITES/backdrop_new_walls.png" id="3_ia85n"]
[ext_resource type="Script" uid="uid://b78g47d2yns4n" path="res://SCRIPTS/gen_room.gd" id="3_n48xt"]
[ext_resource type="PackedScene" uid="uid://0yt3db2j1c4s" path="res://INST/rock.tscn" id="4_t1by3"]
[ext_resource type="PackedScene" uid="uid://dqmpobmm6i54k" path="res://INST/slot_machine.tscn" id="5_44l0o"]
[ext_resource type="PackedScene" uid="uid://c53nw2bjh4vot" path="res://LOOT/coin.tscn" id="6_b5tdy"]

[sub_resource type="Gradient" id="Gradient_kfhs5"]
offsets = PackedFloat32Array(0, 0.42623, 0.827869)
colors = PackedColorArray(1, 1, 1, 0, 0.607446, 0.341479, 0.675022, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_jxo4x"]
gradient = SubResource("Gradient_kfhs5")

[sub_resource type="Curve" id="Curve_n8vyo"]
_data = [Vector2(0, 0.538462), 0.0, 0.0, 0, 0, Vector2(0.246667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_e07m7"]
curve = SubResource("Curve_n8vyo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rwavp"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(5, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(60, 1, 1)
angle_min = -180.0
angle_max = 180.0
direction = Vector3(0, 1, 0)
spread = 10.0
initial_velocity_min = 128.0
initial_velocity_max = 128.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 64.0
scale_max = 128.0
scale_curve = SubResource("CurveTexture_e07m7")
color_ramp = SubResource("GradientTexture1D_jxo4x")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ismcg"]
a = Vector2(-615, -68)
b = Vector2(-615, 68)

[sub_resource type="Gradient" id="Gradient_7jb8d"]
offsets = PackedFloat32Array(0, 0.42623)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7xkns"]
gradient = SubResource("Gradient_7jb8d")

[sub_resource type="Curve" id="Curve_0shsq"]
_data = [Vector2(0, 0.538462), 0.0, 0.0, 0, 0, Vector2(0.246667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_fih8v"]
curve = SubResource("Curve_0shsq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8ji0w"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(60, 1, 1)
angle_min = -180.0
angle_max = 180.0
direction = Vector3(0, 1, 0)
spread = 10.0
initial_velocity_min = 32.0
initial_velocity_max = 64.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 8.0
scale_curve = SubResource("CurveTexture_fih8v")
color_ramp = SubResource("GradientTexture1D_7xkns")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_bi0tn"]
a = Vector2(614, -68)
b = Vector2(615, 68)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hmnhw"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(5, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(60, 1, 1)
angle_min = -180.0
angle_max = 180.0
direction = Vector3(0, 1, 0)
spread = 10.0
initial_velocity_min = 128.0
initial_velocity_max = 128.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 64.0
scale_max = 128.0
scale_curve = SubResource("CurveTexture_e07m7")
color_ramp = SubResource("GradientTexture1D_jxo4x")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_aiqc4"]
a = Vector2(60, -335)
b = Vector2(-60, -335)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_40mls"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(10, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(60, 1, 1)
angle_min = -180.0
angle_max = 180.0
direction = Vector3(0, 1, 0)
spread = 10.0
initial_velocity_min = 128.0
initial_velocity_max = 128.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 64.0
scale_max = 128.0
scale_curve = SubResource("CurveTexture_e07m7")
color_ramp = SubResource("GradientTexture1D_jxo4x")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_gkall"]
a = Vector2(-60, 335)
b = Vector2(60, 334)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_e5hon"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(10, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(60, 1, 1)
angle_min = -180.0
angle_max = 180.0
direction = Vector3(0, 1, 0)
spread = 10.0
initial_velocity_min = 128.0
initial_velocity_max = 128.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 64.0
scale_max = 128.0
scale_curve = SubResource("CurveTexture_e07m7")
color_ramp = SubResource("GradientTexture1D_jxo4x")

[sub_resource type="Curve" id="Curve_avl5a"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.506667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_kirmo"]
curve = SubResource("Curve_avl5a")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jldbr"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(580, 300, 1)
angle_min = -180.0
angle_max = 180.0
spread = 180.0
initial_velocity_min = 4.0
initial_velocity_max = 8.0
gravity = Vector3(0, 0, 0)
scale_min = 4.0
scale_max = 12.0
scale_curve = SubResource("CurveTexture_kirmo")
color = Color(0.966667, 1, 0, 0.258824)

[sub_resource type="Curve" id="Curve_l8e7c"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.253333, 1), 0.0, 0.0, 0, 0, Vector2(0.746667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_5oa5v"]
curve = SubResource("Curve_l8e7c")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_c00w0"]
particle_flag_disable_z = true
angle_min = -180.0
angle_max = 180.0
spread = 180.0
initial_velocity_min = 16.0
initial_velocity_max = 32.0
gravity = Vector3(0, 0, 0)
scale_min = 32.0
scale_max = 128.0
scale_curve = SubResource("CurveTexture_5oa5v")
color = Color(1, 1, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7ywop"]
particle_flag_disable_z = true
angle_min = -180.0
angle_max = 180.0
spread = 180.0
initial_velocity_min = 16.0
initial_velocity_max = 32.0
gravity = Vector3(0, 0, 0)
scale_min = 64.0
scale_max = 128.0
scale_curve = SubResource("CurveTexture_5oa5v")
color = Color(0, 1, 0, 1)

[node name="Room" type="Node2D"]

[node name="Room_Iterate" type="StaticBody2D" parent="." groups=["actualWall"]]
script = ExtResource("1_pgnb6")

[node name="backdrop" type="Sprite2D" parent="Room_Iterate"]
z_index = -8
texture = ExtResource("2_2ivkl")

[node name="Borders" type="Sprite2D" parent="Room_Iterate"]
texture = ExtResource("3_ia85n")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Room_Iterate"]
polygon = PackedVector2Array(-584, -340, -584, -338, -602.9, -338, -615.9, -324, -618, -324, -620, -78, -620, -73, -616, -70, -616, -68, -601, -68, -598, -72, -596, -72, -598, -303, -598, -318, -70, -316, -65, -316, -62, -320, -60, -320, -60, -335, -64, -338, -64, -340)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Room_Iterate"]
polygon = PackedVector2Array(64, -340, 64, -337.8, 62.2, -336, 60, -336, 60, -321, 64, -318, 64, -316, 583, -318, 598, -318, 596, -78, 596, -73, 600, -70, 600, -68, 615, -68, 618, -72, 620, -72, 620, -303.2, 618, -304.3, 618, -322.9, 604, -336, 604, -338)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Room_Iterate"]
polygon = PackedVector2Array(-616, 68, -616, 70.2, -617.8, 72, -620, 72, -620, 303.2, -618, 304.2, -618, 322.9, -604, 335.9, -604, 338, -70, 340, -65, 340, -62, 336, -60, 336, -60, 321, -64, 318, -64, 316, -583, 318, -598, 318, -596, 78, -596, 73, -600, 70, -600, 68)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Room_Iterate"]
polygon = PackedVector2Array(600, 68, 600, 70.2, 598.2, 72, 596, 72, 598, 303, 598, 317.9, 70, 316, 65, 316, 62, 320, 60, 320, 60, 335, 64, 338, 64, 340, 583, 338, 602.9, 338, 615.9, 324, 617.9, 324, 618.9, 304, 620, 304, 620, 73, 616, 70, 616, 68)

[node name="Left_Gen" type="Area2D" parent="Room_Iterate"]
script = ExtResource("3_n48xt")
direction = "left"

[node name="hasNewRoomIndicatorMap" type="GPUParticles2D" parent="Room_Iterate/Left_Gen"]
position = Vector2(-640, -1)
rotation = -4.71238
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_rwavp")
lifetime = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room_Iterate/Left_Gen"]
shape = SubResource("SegmentShape2D_ismcg")

[node name="raycast" type="RayCast2D" parent="Room_Iterate/Left_Gen"]
position = Vector2(-620, -56)
target_position = Vector2(-103, -101)

[node name="newRoomIndicator" type="GPUParticles2D" parent="Room_Iterate/Left_Gen"]
position = Vector2(-640, 0)
rotation = -1.57079
amount = 16
process_material = SubResource("ParticleProcessMaterial_8ji0w")
lifetime = 2.0

[node name="hasDoor" type="RayCast2D" parent="Room_Iterate/Left_Gen"]
position = Vector2(-623, -82)
target_position = Vector2(0, 23)

[node name="Right_Gen" type="Area2D" parent="Room_Iterate"]
script = ExtResource("3_n48xt")
direction = "right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room_Iterate/Right_Gen"]
shape = SubResource("SegmentShape2D_bi0tn")

[node name="raycast" type="RayCast2D" parent="Room_Iterate/Right_Gen"]
position = Vector2(626, 50)
target_position = Vector2(102, 134)

[node name="newRoomIndicator" type="GPUParticles2D" parent="Room_Iterate/Right_Gen"]
position = Vector2(626, 0)
rotation = 1.57079
amount = 16
process_material = SubResource("ParticleProcessMaterial_8ji0w")
lifetime = 2.0

[node name="hasDoor" type="RayCast2D" parent="Room_Iterate/Right_Gen"]
position = Vector2(623, 80)
target_position = Vector2(-1, -23)

[node name="hasNewRoomIndicatorMap" type="GPUParticles2D" parent="Room_Iterate/Right_Gen"]
position = Vector2(640, 0)
rotation = -1.57079
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_hmnhw")
lifetime = 2.0

[node name="up_Gen" type="Area2D" parent="Room_Iterate"]
script = ExtResource("3_n48xt")
direction = "up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room_Iterate/up_Gen"]
shape = SubResource("SegmentShape2D_aiqc4")

[node name="raycast" type="RayCast2D" parent="Room_Iterate/up_Gen"]
position = Vector2(43, -342)
target_position = Vector2(116, -89)

[node name="newRoomIndicator" type="GPUParticles2D" parent="Room_Iterate/up_Gen"]
position = Vector2(0, -335)
amount = 16
process_material = SubResource("ParticleProcessMaterial_8ji0w")
lifetime = 2.0

[node name="hasDoor" type="RayCast2D" parent="Room_Iterate/up_Gen"]
position = Vector2(73, -343)
target_position = Vector2(-30, 0)

[node name="hasNewRoomIndicatorMap" type="GPUParticles2D" parent="Room_Iterate/up_Gen"]
position = Vector2(1, -360)
rotation = -3.14159
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_40mls")
lifetime = 2.0

[node name="down_Gen" type="Area2D" parent="Room_Iterate"]
script = ExtResource("3_n48xt")
direction = "down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room_Iterate/down_Gen"]
shape = SubResource("SegmentShape2D_gkall")

[node name="raycast" type="RayCast2D" parent="Room_Iterate/down_Gen"]
position = Vector2(-50, 341)
target_position = Vector2(-107, 99)

[node name="newRoomIndicator" type="GPUParticles2D" parent="Room_Iterate/down_Gen"]
position = Vector2(0, 341)
rotation = 3.14159
amount = 16
process_material = SubResource("ParticleProcessMaterial_8ji0w")
lifetime = 2.0

[node name="hasDoor" type="RayCast2D" parent="Room_Iterate/down_Gen"]
position = Vector2(-74, 343)
target_position = Vector2(19, 0)

[node name="hasNewRoomIndicatorMap" type="GPUParticles2D" parent="Room_Iterate/down_Gen"]
position = Vector2(1, 360)
rotation = -6.28318
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_e5hon")
lifetime = 2.0

[node name="rock" parent="Room_Iterate" instance=ExtResource("4_t1by3")]

[node name="GAMBLE" type="Node2D" parent="Room_Iterate"]

[node name="SlotMachine" parent="Room_Iterate/GAMBLE" instance=ExtResource("5_44l0o")]

[node name="Coin" parent="Room_Iterate/GAMBLE" instance=ExtResource("6_b5tdy")]
position = Vector2(321, 185)

[node name="Coin2" parent="Room_Iterate/GAMBLE" instance=ExtResource("6_b5tdy")]
position = Vector2(-321, 185)

[node name="Dust" type="GPUParticles2D" parent="Room_Iterate/GAMBLE"]
amount = 16
process_material = SubResource("ParticleProcessMaterial_jldbr")
lifetime = 10.0

[node name="mapPart" type="GPUParticles2D" parent="Room_Iterate/GAMBLE"]
position = Vector2(1, 169)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_c00w0")

[node name="SHOP" type="Node2D" parent="Room_Iterate"]

[node name="rockLeft" parent="Room_Iterate/SHOP" instance=ExtResource("4_t1by3")]
position = Vector2(-128, 0)

[node name="rockRight" parent="Room_Iterate/SHOP" instance=ExtResource("4_t1by3")]
position = Vector2(128, 0)

[node name="pLeft" type="Label" parent="Room_Iterate/SHOP"]
offset_left = -168.0
offset_top = 24.0
offset_right = -128.0
offset_bottom = 47.0
scale = Vector2(2, 2)
text = "#"
horizontal_alignment = 1

[node name="pMiddle" type="Label" parent="Room_Iterate/SHOP"]
offset_left = -40.0
offset_top = 24.0
offset_bottom = 47.0
scale = Vector2(2, 2)
text = "#"
horizontal_alignment = 1

[node name="pRight" type="Label" parent="Room_Iterate/SHOP"]
offset_left = 88.0
offset_top = 24.0
offset_right = 128.0
offset_bottom = 47.0
scale = Vector2(2, 2)
text = "#"
horizontal_alignment = 1

[node name="ShopText" type="Label" parent="Room_Iterate/SHOP"]
modulate = Color(0.705882, 0.705882, 0.705882, 1)
offset_left = -107.0
offset_top = -210.0
offset_right = -63.0
offset_bottom = -187.0
scale = Vector2(5.18302, 5.18302)
text = "SHOP"

[node name="mapPart" type="GPUParticles2D" parent="Room_Iterate/SHOP"]
position = Vector2(1, 185)
emitting = false
process_material = SubResource("ParticleProcessMaterial_7ywop")

[connection signal="body_entered" from="Room_Iterate/Left_Gen" to="Room_Iterate/Left_Gen" method="_on_body_entered"]
[connection signal="body_entered" from="Room_Iterate/Right_Gen" to="Room_Iterate/Right_Gen" method="_on_body_entered"]
[connection signal="body_entered" from="Room_Iterate/up_Gen" to="Room_Iterate/up_Gen" method="_on_body_entered"]
[connection signal="body_entered" from="Room_Iterate/down_Gen" to="Room_Iterate/down_Gen" method="_on_body_entered"]

[editable path="Room_Iterate/rock"]
